--- a/src/pages/Seasons/seasons.scss
+++ b/src/pages/Seasons/seasons.scss
@@ -1,5 +1,18 @@
 .seasons {
-    &__body {
-        padding: 0px 60px;
+
+    // .seasons__container
+
+    &__container {}
+
+    // .seasons__top
+
+    &__top {
+        display: flex;
+        justify-content: center;
+        margin: 0px 0px 16px 0px;
     }
+
+    // .seasons__body
+
+    &__body {}
 }
