--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,17 +1,31 @@
-.wrapper {
-    min-height: 100%;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-
-    >main {
-        flex: 1 1 auto;
-    }
-}
-
 [class*="__container"] {
-    max-width: 1320px;
+    max-width: 1020px;
     box-sizing: content-box;
     margin: 0 auto;
     height: 100%;
+    padding: 0px 0px 50px 0px;
+}
+
+.label {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.15px;
+}
+
+.text {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 21px;
+    letter-spacing: 0.25px;
+    color: rgba(0, 0, 0, 0.6);
+}
+
+.info-label {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    letter-spacing: 0.15px;
+    color: #8E8E93;
+    margin: 0px 0px 24px 0px;
 }
