--- a/src/styles/normilize.scss
+++ b/src/styles/normilize.scss
@@ -29,7 +29,7 @@ body {
 body {
     color: #000000;
     line-height: 1;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Karla', sans-serif;
     font-size: 14px;
     text-rendering: optimizeLegibility;
     -ms-text-size-adjust: 100%;
