--- a/src/pages/Character/character.scss
+++ b/src/pages/Character/character.scss
@@ -18,11 +18,20 @@
         border-radius: 50%;
         overflow: hidden;
         margin: 0px 0px 16px 0px;
+        width: fit-content;
     }
 
     // .character__null
 
     &__null {}
+
+    // .character__character
+
+    &__character {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 
     // .character__body
 
