--- a/src/styles/normilize.scss
+++ b/src/styles/normilize.scss
@@ -42,7 +42,7 @@ body {
 input,
 button,
 textarea {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Karla', sans-serif;
     font-size: inherit;
 }
 
