--- a/src/components/Season/season.scss
+++ b/src/components/Season/season.scss
@@ -2,7 +2,9 @@
 
     &__wrapper {
         padding: 20px;
-        border: 1px solid #000;
+        background: #FFFFFF;
+        box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2), 0px 3px 4px rgba(0, 0, 0, 0.12), 0px 2px 4px rgba(0, 0, 0, 0.14);
+        border-radius: 4px;
 
         &:not(:last-child) {
             margin: 0px 0px 30px 0px;
@@ -14,35 +16,31 @@
     &__top {
         display: flex;
         align-items: center;
+        margin: 0px 0px 15px 0px;
     }
 
     // .season__title
 
     &__title {
         font-weight: 700;
-        font-size: 18px;
+        font-size: 22px;
+        line-height: 30px;
+        letter-spacing: 0.15px;
+        color: rgba(0, 0, 0, 0.87);
         margin: 0px 30px 0px 0px;
-    }
-
-    // .season__search
-
-    &__search {
-        margin: 0px 30px 0px 0px;
-
-        input {
-            border: 1px solid #000;
-        }
-    }
-
-    // .season__sort
-
-    &__sort {
-        input {
-            border: 1px solid #000;
-        }
     }
 
     // .season__body
 
-    &__body {}
+    &__body {
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 30px;
+        letter-spacing: 0.15px;
+        text-align: center;
+        color: rgba(0, 0, 0, 0.87);
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 30px;
+    }
 }
